--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "react-modal-component",
-  "version": "0.1.0",
-  "private": true,
+  "name": "simple_react_modal_component",
+  "version": "1.0.5",
+  "private": false,
+  "main": "lib/Modal.js",
+  "files": [
+    "Modal.jsx",
+    "modal.css",
+    "Modal.js",
+    "README.md",
+    "index.js"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "npm": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -13,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "babel src -d lib",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +43,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.22.15",
+    "@babel/core": "^7.22.20",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15"
   }
 }
